2011-09-29  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj:
	* GlobalObj.cs:
	* AssemblyInfo.cs:
	* GlobalObj.Readers.cs: - release 0.1.8.1

2011-09-29  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj:
	* GlobalObj.cs:
	* PcscReader.cs:
	* AssemblyInfo.cs:
	* SmartMouseReader.cs:
	* GlobalObj.Readers.cs:
	* PcscReader.IReader.cs:
	* SmartMouseReader.IReader.cs: - release 0.1.8.0

2011-09-29  Armando Basile  <hmandevteam@gmail.com>

	* en-US.xml:
	* it-IT.xml:
	* GlobalObj.cs:
	* PcscReader.cs:
	* IReader.cs:
	* SmartMouseReader.cs:
	* GlobalObj.Readers.cs:
	* PcscReader.IReader.cs:
	* SmartMouseReader.IReader.cs: - improve reader interface use

2011-09-28  Armando Basile  <hmandevteam@gmail.com>

	* Readers:
	* Interfaces:
	* comex-base.csproj:
	* PcscReader.cs:
	* IReader.cs:
	* AssemblyInfo.cs:
	* SmartMouseReader.cs:
	* PcscReader.IReader.cs:
	* SmartMouseReader.IReader.cs: - new base component
	architecture (using reader interface)

2011-09-21  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj: - removed wrong file permissions
	(execute) for language files


2011-09-14  Armando Basile  <hmandevteam@gmail.com>

	* Languages/en-US.xml:
	* Languages/it-IT.xml: - fix: removed <a> tag, on windows
	there is GTK 2.12 and <a> tag work from GTK 2.18

2011-09-14  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/Pcsc.cs: - fix: atrLen SCardStatus parameter on
	winscard require preset

2011-09-13  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj:
	* Properties/AssemblyInfo.cs:
	* Src/Classes/SettingsManager.cs: - removed portname parameter
	in settings file

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj: - removed specific version requires for
	log4net and comex-base

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.dll.config: - removed unused row

2011-09-09  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj: